# __COPYRIGHT__
# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE X.X.X - XXX

  From Dan Eaton:

    - Fix generation of Visual Studio 8 project files on x64 platforms.

  From Steven Knight:

    - Fix the error message when use of a non-existent drive on Windows
      is detected.

    - Add sources for files whose targets don't exist in $CHANGED_SOURCES.

    - Detect implicit dependencies on commands even when the command is
      quoted.

    - Fix interaction of $CHANGED_SOURCES with the --config=force option.

    - Fix finding #include files when the string contains escaped
      backslashes like "C:\\some\\include.h".

    - Pass $CCFLAGS to Visual C/C++ precompiled header compilation.

    - Remove unnecessary nested $( $) around $_LIBDIRFLAGS on link lines
      for the Microsoft linker, the OS/2 ilink linker and the Phar Lap
      linkloc linker.

  From Robert P. J. Day:

    - User's Guide updates.



RELEASE 1.2.0.d20090113 - Tue, 13 Jan 2009 02:50:30 -0800

  From Stanislav Baranov, Ted Johnson and Steven Knight:

    - Add support for batch compilation of Visual Studio C/C++ source
      files, controlled by a new $MSVC_BATCH construction variable.

  From Steven Knight:

    - Print the message, "scons: Build interrupted." on error output,
      not standard output.

    - Add a --warn=future-deprecated option for advance warnings about
      deprecated features that still have warnings hidden by default.

    - Fix use of $SOURCE and $SOURCES attributes when there are no
      sources specified in the Builder call.

    - Add support for new $CHANGED_SOURCES, $CHANGED_TARGETS,
      $UNCHANGED_SOURCES and $UNCHANGED_TARGETS variables.

    - Add general support for batch builds through new batch_key= and
      targets= keywords to Action object creation.

  From Arve Knudsen:
